<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Driving Trends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="driving_trends_title">Driving Trends</string>
    <string name="header_time_based_view">Time Based View</string>
    <string name="header_score">Score</string>
    <string name="header_mpg">MPG</string>
    <string name="header_fuel">Fuel</string>
    <string name="header_distance">Distance</string>
    <string name="total_amount_spent_month">Total amount spent this month</string>
    <string name="change_since_last_month">Change since last month</string>
    <string name="not_implemented_yet">Not Implemented Yet</string>
    <string name="fuel_action_week">Week</string>
    <string name="fuel_action_month">Month</string>
    <string name="fuel_action_year">Year</string>

</resources>
