<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@color/header_containter_color" >

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/driving_trends_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/header_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_title"
            android:layout_centerHorizontal="true"
            android:text="@string/header_time_based_view"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/header_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:src="@android:drawable/ic_menu_revert" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/header_action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header_container"
        android:layout_marginBottom="@dimen/margin_medium_size"
        android:layout_marginTop="@dimen/margin_medium_size"
        android:background="@color/header_action_buttons_bg" >

        <TextView
            android:id="@+id/score_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/header_score"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:clickable="true"/>

        <TextView
            android:id="@+id/mpg_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/header_mpg"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:clickable="true"/>

        <TextView
            android:id="@+id/fuel_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/header_fuel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:clickable="true" />

        <TextView
            android:id="@+id/distance_action_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/header_distance"
            android:textAppearance="?android:attr/textAppearanceMedium" 
            android:clickable="true"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/driving_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/header_action_buttons" >

    </FrameLayout>

</RelativeLayout>